--- a/src/assets/styles/_mixins.sass
+++ b/src/assets/styles/_mixins.sass
@@ -18,7 +18,7 @@
   display: flex
   justify-content: center
   align-items: center
-  padding: 15px
+  padding: 12px 15px
   border-radius: 5px
   border: none
   cursor: pointer
