--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -29,4 +29,31 @@ h6 {
 
 hr {
   width: 100%;
+}
+
+p {
+  font-size: 1rem;
+}
+
+.inertia-form {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding: 15px;
+}
+.inertia-form-input {
+  display: block;
+  width: 100%;
+  padding: 5px 10px;
+  font-size: 1rem;
+  color: #495057;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  border-radius: 5px;
+  line-height: 1.5;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+.inertia-form-input:focus {
+  outline: 0;
 }/*# sourceMappingURL=styles.css.map */
