--- a/src/assets/styles/styles.sass
+++ b/src/assets/styles/styles.sass
@@ -1,5 +1,5 @@
-@use '../sass/_variables.sass' as *
-@use '../sass/_mixins.sass' as *
+@use './_variables.sass' as *
+@use './_mixins.sass' as *
 
 #app
   @include flex-center
@@ -25,4 +25,31 @@ h6
   color: $text-color
 
 hr
-    width: 100%
+  width: 100%
+
+
+p
+  font-size: 1rem
+
+.inertia
+  &-form
+    display: flex
+    flex-direction: column
+    gap: 5px
+    padding: 15px
+
+    &-input
+      display: block
+      width: 100%
+      padding: 5px 10px
+      font-size: 1rem
+      color: #495057
+      background-color: #fff
+      background-clip: padding-box
+      border: 1px solid #ced4da
+      border-radius: 5px
+      line-height: 1.5
+      transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
+      &:focus 
+        outline: 0
+    
