added auth store, login with google functionality

--- a/src/assets/styles/styles.sass
+++ b/src/assets/styles/styles.sass
@@ -35,12 +35,10 @@ p
   &-form
     display: flex
     flex-direction: column
+    align-content: center
     gap: 5px
-    padding: 15px
-
     &-input
       display: block
-      width: 100%
       padding: 5px 10px
       font-size: 1rem
       color: #495057
@@ -52,4 +50,3 @@ p
       transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out
       &:focus 
         outline: 0
-    
