--- a/src/assets/styles/_mixins.sass
+++ b/src/assets/styles/_mixins.sass
@@ -14,7 +14,6 @@
   align-items: center
 
 @mixin button($bg-color: $primary-color, $color: $text-color)
-
   display: flex
   justify-content: center
   align-items: center
@@ -27,3 +26,8 @@
   color: $color
   &:hover
     background: color.adjust($bg-color, $blackness: 10%)
+  
+@mixin full-screen
+  width: 100%
+  height: 100%
+  
