--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -38,12 +38,11 @@ p {
 .inertia-form {
   display: flex;
   flex-direction: column;
+  align-content: center;
   gap: 5px;
-  padding: 15px;
 }
 .inertia-form-input {
   display: block;
-  width: 100%;
   padding: 5px 10px;
   font-size: 1rem;
   color: #495057;
