--- a/src/assets/styles/_variables.sass
+++ b/src/assets/styles/_variables.sass
@@ -3,7 +3,7 @@ $surface-color: #121212
 $text-color: #fff
 $primary-color: #ffab5d
 
-$error: #ff5370
-$success: #36d399
-$info: #2c96f1
-$warning: #ffc107
+$error: #ff5370!important
+$success: #36d399!important
+$info: #2c96f1!important
+$warning: #ffc107!important
