reconfigure sass live compiler output dir

--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -1,5 +1,5 @@
-@use './_variables.sass' as *
-@use './_mixins.sass' as *
+@use './variables' as *
+@use './mixins' as *
 
 #app
   @include flex-center
@@ -27,6 +27,6 @@ h6
 hr
   width: 100%
 
-
 p
   font-size: 1rem
+
