--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -33,3 +33,13 @@ hr {
 p {
   font-size: 1rem;
 }
+
+.layout {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.layout-body, .layout-body article {
+  flex-grow: 1;
+}
