--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -29,3 +29,9 @@ hr
 p
   font-size: 1rem
 
+.layout
+    @include full-screen
+    @include flex-column
+    &-body,
+    &-body article
+      flex-grow: 1
